--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/002_Estructura_HTML/Solucion.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/002_Estructura_HTML/Solucion.html
@@ -6,12 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aprender HTML es muy divertido</h1>
+    <div>
+        <h1>Aprender HTML es muy divertido</h1>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit
 
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit
 
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit</p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit</p>
+    </div>    
 </body>
 </html>
