--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/001_Hola_Mundo/index.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/001_Hola_Mundo/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Título</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hola Mundo</title>
 </head>
 <body>
-
-<h1>Hola Mundo!</h1>
-
+    <h1>Hola Mundo</h1>
 </body>
 </html>
