--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/002_Estructura_HTML/Solucion.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/002_Estructura_HTML/Solucion.html
@@ -9,11 +9,11 @@
     <div>
         <h1>Aprender HTML es muy divertido</h1>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit <br />
 
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit <br />
 
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit</p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit</p> <br />
     </div>    
 </body>
 </html>
