--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/002_Estructura_HTML/Solucion.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/002_Estructura_HTML/Solucion.html
@@ -6,16 +6,9 @@
     <title>Ejercicio 2</title>
 </head>
 <body>
-    <div>
-        <h1>Aprender HTML es muy divertido</h1>
-
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit <br />
-            <br />
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit <br />
-            <br />
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit <br />
-        </p>
-    </div>    
+    <h1>Aprender HTML es muy divertido</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae quam optio nesciunt atque iure animi dicta velit</p>
 </body>
 </html>
