--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/004_Etiquetas_intermedio_HTML/Solucion.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/004_Etiquetas_intermedio_HTML/Solucion.html
@@ -14,7 +14,7 @@
 
     <p>Cuando solo tenía 25 años trabajó en el motor de cohete F-1 que sirvió para propulsar el cohete <em>Saturno V</em> que
         viajó a la luna, y a principios de los años 70 comenzó a desarrollar con <b>Robert Kahn</b> un conjunto de <b>protocolos
-        de comunicaciones</b> para la red militar, financiado por la <b>agencia gubernamental DARPA.</b><blockquote> El objetivo era crear una
+        de comunicaciones</b> para la red militar, financiado por la <b>agencia gubernamental <u>DARPA</u>.</b><blockquote> El objetivo era crear una
         "red de redes" que permitiera interconectar las distintas redes del Departamento de Defensa de los Estados
         Unidos, todas ellas de diferentes tipos y que funcionaban con diversos sistemas operativos, con independencia
         del tipo de conexión: <u>radioenlaces</u>, <u>satélites</u> y <u>líneas telefónicas</u>.</blockquote>
