--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/010_Tablas_HTML/Solucion.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/010_Tablas_HTML/Solucion.html
@@ -1,5 +1,15 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <style>
+table, th, td, tr {
+            border: 1px solid red;
+            border-collapse: collapse;
+            margin: 15px;
+            text-align: center;
+        }
+    </style>
+</head>
 
 <body>
 
