--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/011_Formularios_HTML/ejemplo_inputs.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/011_Formularios_HTML/ejemplo_inputs.html
@@ -1,4 +1,12 @@
-<form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <form>
     <label for="check">Acepto condiciones</label>
     <input type="checkbox" id="check"><br>
     <label for="color">Elige un color:</label>
@@ -35,3 +43,5 @@
     <input type="week"><br>
     <input type="button" value="Enviar">
   </form>
+</body>
+</html>
