--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/011_Formularios_HTML/solucion.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/011_Formularios_HTML/solucion.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Información</title>
+    <link rel="icon" href="https://img.icons8.com/?size=100&id=hYzSwuG6DhyV&format=png&color=22C3E6" type="favicon">
 </head>
 <body>
-    <form action="#" method="post">
+    <form action="#" name="form" id="form">
         <fieldset>
             <legend>Información Personal</legend>
             
@@ -19,7 +20,7 @@
             <label for="fecha_nacimiento">Fecha de Nacimiento:</label>
             <input type="date" id="fecha_nacimiento" name="fecha_nacimiento" required><br><br>
 
-            <span>Género:</span><br>
+            <label>Género:</label><br>
             <input type="radio" id="masculino" name="genero" value="masculino" required>
             <label for="masculino">Masculino</label><br>
             <input type="radio" id="femenino" name="genero" value="femenino" required>
