--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/012_Incrustaciones_HTML/ejemplos_incrustar.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/012_Incrustaciones_HTML/ejemplos_incrustar.html
@@ -11,11 +11,11 @@
     <!-- Incrustación de una imagen -->
     <img src="hydrangeas-7367535_1280.jpg" alt="Imagen">
     <!-- Incrustación de un video -->
-    <video src="video.mp4" controls></video>
+    <video src="https://cdn.pixabay.com/video/2024/06/11/216196_large.mp4" controls></video>
     <!-- Incrustación de un audio -->
-    <audio src="audio.mp3" controls></audio>
+    <audio src="https://cdn.pixabay.com/audio/2024/05/24/audio_46382ae035.mp3" controls></audio>
     <!-- Incrustación de una página web externa -->
-    <iframe src="https://www.elpais.com"></iframe>
+    <iframe src='https://www.minijuegos.com/embed/plants-vs-zombies-war' style='width:100%;height:100%;' frameborder='0' allowfullscreen></iframe>
     <!-- Incrustación de contenido externo utilizando plugins -->
     <embed src="contenido.swf">
     <!-- Incrustación de contenido multimedia o plugins -->
