--- a/MODULO_1/UNIDAD_1_HTML_CSS/HTML/012_Incrustaciones_HTML/ejemplos_incrustar.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/HTML/012_Incrustaciones_HTML/ejemplos_incrustar.html
@@ -9,22 +9,22 @@
 
 <body>
     <!-- Incrustación de una imagen -->
-    <img src="hydrangeas-7367535_1280.jpg" alt="Imagen">
+    <img src="https://cdn.pixabay.com/photo/2024/05/26/10/15/bird-8788491_1280.jpg" alt="Imagen" width="300" height="300">
     <!-- Incrustación de un video -->
-    <video src="https://cdn.pixabay.com/video/2024/06/11/216196_large.mp4" controls></video>
+    <video src="https://cdn.pixabay.com/video/2024/06/11/216196_large.mp4" controls width="300" height="300"></video>
     <!-- Incrustación de un audio -->
-    <audio src="https://cdn.pixabay.com/audio/2024/05/24/audio_46382ae035.mp3" controls></audio>
+    <audio src="https://cdn.pixabay.com/audio/2024/05/24/audio_46382ae035.mp3" controls width="300" height="300"></audio>
     <!-- Incrustación de una página web externa -->
-    <iframe src='https://www.minijuegos.com/embed/plants-vs-zombies-war' style='width:100%;height:100%;' frameborder='0' allowfullscreen></iframe>
+    <iframe src='https://www.minijuegos.com/embed/plants-vs-zombies-war' width="300" height="300" frameborder='0' allowfullscreen></iframe>
     <!-- Incrustación de contenido externo utilizando plugins -->
-    <embed src="contenido.swf">
+    <embed src="contenido.swf" width="300" height="300">
     <!-- Incrustación de contenido multimedia o plugins -->
-    <object data="contenido.swf" type="application/x-shockwave-flash"></object>
+    <object data="contenido.swf" type="application/x-shockwave-flash" width="300" height="300"></object>
     <!-- Incrustación de un lienzo para dibujar gráficos -->
-    <canvas id="miCanvas" width="200" height="200"></canvas>
+    <canvas id="miCanvas" width="300" height="300"></canvas>
     <!-- Incrustación de gráficos vectoriales escalables -->
-    <svg width="400" height="180">
-        <rect x="50" y="20" width="300" height="100" style="fill:blue" />
+    <svg width="300" height="300">
+        <rect x="0" y="0" width="300" height="300" style="fill:blue" />
     </svg>
 </body>
 
