--- a/MODULO_1/UNIDAD_1_HTML_CSS/CSS/006_Position_Absolute/index.html
+++ b/MODULO_1/UNIDAD_1_HTML_CSS/CSS/006_Position_Absolute/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="contendor">
+    <div id="contenedor">
         <div class="tejado"></div>
         <div class="casa"></div>
         <div class="puerta"><h1>120</h1></div>
