--- a/MODULO_2/PHP/002_Formulario/formulario.html
+++ b/MODULO_2/PHP/002_Formulario/formulario.html
@@ -11,6 +11,7 @@
     <form action="procesar.php" method="post">
         <p>Su nombre: <input type="text" name="nombre" /></p>
         <p>Su edad: <input type="text" name="edad" /></p>
+        <p>Su color favorito: <input type="color" name="color" /></p>
         <p><input type="submit" /></p>
     </form>
 </body>
