--- a/MODULO_2/PHP/002_Formulario/formulario.html
+++ b/MODULO_2/PHP/002_Formulario/formulario.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .colored-div {
+            width: 100px;
+            height: 100px;
+        }
+    </style>
 </head>
 
 <body>
