--- a/MODULO_2/PHP/002_Formulario/formulario.html
+++ b/MODULO_2/PHP/002_Formulario/formulario.html
@@ -6,7 +6,7 @@
     <title>Formulario</title>
 </head>
 <body>
-    <form action="procesar.php" method="post">
+    <form action="procesar.php" method="get">
         <p>Su nombre: <input type="text" name="nombre" required /></p>
         <p>Su edad: <input type="number" name="edad" required /></p>
         <p>Su color favorito: <input type="color" name="color" required /></p>
