--- a/MODULO_2/PHP/005_Ejercicio_2/suma.html
+++ b/MODULO_2/PHP/005_Ejercicio_2/suma.html
@@ -6,10 +6,10 @@
     <title>Area</title>
 </head>
 <body>
-    <form action="procesar.php" method="post">
-        <label for="num1">Numero 1</label>
+    <form action="suma.php" method="post">
+        <label for="num1">Base</label>
         <input type="number" name="num1" id="num1">
-        <label for="num2">Numero 2</label>
+        <label for="num2">Altura</label>
         <input type="number" name="num2" id="num2">
         <button type="submit" value="CalcularArea" >Calcular Area</button>
     </form>
