--- a/MODULO_2/PHP/005_Ejercicio_2/suma.html
+++ b/MODULO_2/PHP/005_Ejercicio_2/suma.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Area</title>
-    <liink rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <form action="suma.php" method="post">
