--- a/MODULO_2/PHP/006_Ejercicio_3/index.html
+++ b/MODULO_2/PHP/006_Ejercicio_3/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ingresa datos</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <h2>Ingrese dos números</h2>
-        <form action="process.php" method="post">
+        <form action="procesar.php" method="post">
             <div class="form-group">
                 <label for="num1">Primer número:</label>
                 <input type="number" name="num1">
