--- a/MODULO_2/PHP/007_Ejercicio_4/index.html
+++ b/MODULO_2/PHP/007_Ejercicio_4/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Conversión de Calificaciones</h1>
         <form action="convertir.php" method="post">
-            <label for="grade">Ingrese la calificación numérica:</label>
+            <label for="grade">Ingrese la calificación numérica del 0 al 20:</label>
             <input type="number" name="grade">
             <button type="submit">Convertir</button>
         </form>
