--- a/MODULO_2/PHP/009_Ejercicio_6/index.html
+++ b/MODULO_2/PHP/009_Ejercicio_6/index.html
@@ -11,7 +11,7 @@
         <label for="cantidad">Número de Entradas:</label>
         <input type="number" name="cantidad">
         <label for="precio">Precio por Entrada:</label>
-        <input type="number" name="precio">>
+        <input type="number" name="precio">
         <input type="submit" value="Calcular Total">
     </form>
 </body>
