--- a/MODULO_2/PHP/015_Ejercicio_12/index.html
+++ b/MODULO_2/PHP/015_Ejercicio_12/index.html
@@ -10,12 +10,12 @@
     <div class="container">
         <h1>Introduce 6 datos</h1>
         <form action="procesar.php" method="post">
-            <input type="text" name="dato" placeholder="Dato 1" required>
-            <input type="text" name="dato" placeholder="Dato 2" required>
-            <input type="text" name="dato" placeholder="Dato 3" required>
-            <input type="text" name="dato" placeholder="Dato 4" required>
-            <input type="text" name="dato" placeholder="Dato 5" required>
-            <input type="text" name="dato" placeholder="Dato 6" required>
+            <input type="text" name="dato1" placeholder="Dato 1" required>
+            <input type="text" name="dato2" placeholder="Dato 2" required>
+            <input type="text" name="dato3" placeholder="Dato 3" required>
+            <input type="text" name="dato4" placeholder="Dato 4" required>
+            <input type="text" name="dato5" placeholder="Dato 5" required>
+            <input type="text" name="dato6" placeholder="Dato 6" required>
             <input type="submit" value="Enviar">
         </form>
     </div>
