--- a/MODULO_2/PHP/019_Ejercicio_16/formulario.html
+++ b/MODULO_2/PHP/019_Ejercicio_16/formulario.html
@@ -34,4 +34,10 @@
             </fieldset>
 
             <label for="comentarios">Comentarios:</label>
-            <textarea id="
+            <textarea id="comentarios" name="comentarios" rows="4"></textarea>
+
+            <button type="submit">Enviar</button>
+        </form>
+    </div>
+</body>
+</html>
