--- a/MODULO_2/PHP/025_Ejercicio_21/index.html
+++ b/MODULO_2/PHP/025_Ejercicio_21/index.html
@@ -19,6 +19,9 @@
             
             <label for="apellido2">Segundo Apellido:</label>
             <input type="text" id="apellido2" name="apellido2"><br>
+
+            <label for="email">Enviar Correo Electrónico:</label>
+            <input type="email" id="email" name="email" required><br>
         </fieldset>
 
         <fieldset>
